--- a/app/globals.css
+++ b/app/globals.css
@@ -5,8 +5,6 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -75,6 +73,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  font-family: var(--font-roboto), sans-serif !important;
 }
 
 .dark {
@@ -143,4 +142,17 @@
 
 button {
   @apply cursor-pointer;
+}
+
+label {
+  @apply !font-medium;
+}
+
+
+body {
+  font-family: var(--font-roboto) !important;
+}
+
+textarea {
+  @apply bg-[#F6F9FF];
 }
