--- a/components/Properties/QuickAdd/quickadd.css
+++ b/components/Properties/QuickAdd/quickadd.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
 input {
     background-color: #F6F9FF;
     border: none;
@@ -14,12 +12,10 @@ input::placeholder {
 }
 
 label {
-    font-family: "Poppins", sans-serif;
+    @apply mb-[8px];
 }
 
-.poppins-font {
-    font-family: "Poppins", sans-serif;
-}
+
 
 .no-scrollbar::-webkit-scrollbar {
     display: none;
@@ -28,7 +24,6 @@ label {
 .no-scrollbar {
     -ms-overflow-style: none;
     scrollbar-width: none;
-
 }
 
 button[role="combobx"] {
